--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -10,6 +10,7 @@
         android:id="@+id/sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         >
@@ -185,12 +186,12 @@
 
         <Button
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:text="@string/lblBtnAplicarFiltro"
             android:backgroundTint="@color/onSelectedColorBotBar"
             android:enabled="false"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="30dp"
             app:layout_constraintTop_toBottomOf="@id/menuFiltros"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
