--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,6 +24,7 @@
             android:layout_marginTop="30dp"
             android:hint="Número de Teléfono"
             android:inputType="phone"
+            android:maxLength="10"
             android:background="@drawable/edittext_background"
             android:padding="10dp"
             android:gravity="center_vertical"
@@ -47,13 +48,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" />
-
-        <View
-            android:id="@+id/separator"
-            android:layout_width="270dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="30dp"
-            android:background="@android:color/darker_gray" />
-
     </LinearLayout>
 </ScrollView>
