--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -211,7 +211,7 @@
 
                 <CheckBox
                     android:theme="@style/CheckboxStyle"
-                    android:id="@+id/radioBtnMasculino"
+                    android:id="@+id/checkMasculino"
                     android:layout_marginStart="40dp"
                     android:layout_columnSpan="2"
                     android:layout_column="0"
@@ -221,7 +221,7 @@
                     android:checked="true" />
                 <CheckBox
                     android:theme="@style/CheckboxStyle"
-                    android:id="@+id/radioBtnFemenino"
+                    android:id="@+id/checkFemenino"
                     android:layout_marginStart="40dp"
                     android:layout_columnSpan="2"
                     android:layout_column="0"
@@ -244,7 +244,7 @@
 
                 <CheckBox
                     android:theme="@style/CheckboxStyle"
-                    android:id="@+id/radioBtnCasado"
+                    android:id="@+id/checkCasado"
                     android:layout_marginStart="40dp"
                     android:layout_columnSpan="2"
                     android:layout_column="0"
@@ -254,7 +254,7 @@
                     android:checked="true"/>
                 <CheckBox
                     android:theme="@style/CheckboxStyle"
-                    android:id="@+id/radioBtnSoltero"
+                    android:id="@+id/checkSoltero"
                     android:layout_marginStart="40dp"
                     android:layout_columnSpan="2"
                     android:layout_column="0"
@@ -271,9 +271,9 @@
             android:layout_width="match_parent"
             android:text="@string/lblBtnAplicarFiltro"
             android:backgroundTint="@color/onSelectedColorBotBar"
-            android:enabled="false"
-            android:layout_marginTop="10dp"
+            android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="30dp"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/menuFiltros"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
