--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="fondoContenedorFiltro">#f4f4f4</color>
     <color name="txtResultados">#7c7c7d</color>
     <color name="fondoCardListaFelirgeses">#f5f5f5</color>
+    <color name="btnDesactivado">#848991</color>
 </resources>
