--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -76,6 +76,7 @@
                     android:layout_marginTop="10dp"/>
 
                 <RadioGroup
+                    android:id="@+id/radioGroup"
                     android:layout_column="0"
                     android:layout_columnSpan="2"
                     android:paddingStart="40dp"
@@ -171,6 +172,7 @@
                                 android:inputType="number"
                                 android:maxLength="2"
                                 android:textColorHighlight="@color/onSelectedColorBotBar"
+                                android:textAlignment="center"
                                 app:layout_constraintTop_toBottomOf="@id/lblMin"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintEnd_toStartOf="@id/guideline"
@@ -183,6 +185,7 @@
                                 android:inputType="number"
                                 android:maxLength="2"
                                 android:textColorHighlight="@color/onSelectedColorBotBar"
+                                android:textAlignment="center"
                                 app:layout_constraintTop_toBottomOf="@id/lblMax"
                                 app:layout_constraintStart_toEndOf="@id/guideline"
                                 app:layout_constraintEnd_toEndOf="parent"
