--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item_1"
-        android:enabled="true"
+        android:id="@+id/listarFragment"
         android:icon="@drawable/play_arrow"
         android:title="@string/bottomBarText1"/>
     <item
         android:id="@+id/item_2"
-        android:enabled="true"
         android:icon="@drawable/bar_chart"
         android:title="@string/bottomBarText2"/>
     <item
-        android:id="@+id/item_3"
-        android:enabled="true"
+        android:id="@+id/pendingFragment"
         android:icon="@drawable/notifications"
         android:title="@string/bottomBarText3"/>
 </menu>
