--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -50,7 +50,8 @@
                     android:layout_marginEnd="30dp"
                     android:backgroundTint="@color/white"
                     android:textSize="16sp"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_marginTop="12dp"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lblSms"
