--- a/app/src/main/res/layout/item_sms.xml
+++ b/app/src/main/res/layout/item_sms.xml
@@ -39,6 +39,33 @@
             app:layout_constraintTop_toBottomOf="@+id/lblMensaje"/>
 
         <TextView
+            android:id="@+id/lblGrupo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lblGrupoHist"
+            android:textSize="14sp"
+            android:fontFamily="@font/roboto_bold"
+            android:layout_marginStart="12dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtMensaje"
+            android:layout_marginTop="3dp"/>
+
+        <TextView
+            android:id="@+id/txtGrupo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:text="Personas mayores de 63 años."
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="12dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/lblGrupo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtMensaje"/>
+
+        <TextView
             android:id="@+id/lblEnviado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +74,7 @@
             android:fontFamily="@font/roboto_bold"
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtMensaje"
+            app:layout_constraintTop_toBottomOf="@id/lblGrupo"
             android:layout_marginTop="3dp"/>
 
         <TextView
@@ -61,7 +88,7 @@
             android:layout_marginEnd="12dp"
             app:layout_constraintStart_toEndOf="@+id/lblEnviado"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtMensaje"/>
+            app:layout_constraintTop_toBottomOf="@+id/txtGrupo"/>
 
         <TextView
             android:id="@+id/lblFiltro"
