--- a/app/src/main/res/layout/fragment_bottom_sheet_modal.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_modal.xml
@@ -27,6 +27,7 @@
         app:layout_constraintGuide_begin="65dp"/>
 
     <ImageButton
+        android:id="@+id/btnCerrar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/close"
